# CobbleSeer-MCP-Server

./: .gitignore  CHANGELOG.md  DEMO_PACKAGE_SUMMARY.md  FIXED_ACCURACY_BUG.md  FULL_FEATURE_TEST.md  LINEBREAK_GUIDE.md  LINEBREAK_SOLUTION.txt  MOVE_TEMPLATE.md  OPTIMIZATION_SUMMARY.md  PACKAGE_FORMAT_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_LINEBREAK.txt  SMART_LINEBREAK_FEATURE.md  STATUS.md  UPDATE_SUMMARY.txt  analyze_reference_data.py  batch_generate_with_moves.py  config.yaml  create_demo_package.py  pyproject.toml  requirements.txt  server.py  start.bat  test_basic.py  test_builder.py  test_folder.py  test_import.py  test_improved_formatting.py  test_mcp.py  test_move_generator.py  test_moves.py  test_optimization.py  test_simple.py  test_template_library.py  test_text_formatting.py  verify_moves.py  测试指南-规则引擎.md
models/: __init__.py
services/: __init__.py  ai_generator.py  builder.py  move_generator.py  rag_service.py  template_library.py  validator.py
utils/: __init__.py
